# processing4

./: .all-contributorsrc  .gitignore  .gitmodules  AGENTS.md  AI_USAGE_POLICY.md  BUILD.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SCHEMA.md  build.gradle.kts  gradle.properties  install.sh  package-lock.json  package.json  settings.gradle.kts
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_enhancement.yml  3_feature-request.yml
.github/workflows/: build-gradle.yml  build.yml  contributors-png.yml  pr.yml  pull_request-gradle.yml  pull_request.yml  release-gradle.yml  release.yml
app/: .gitignore  build.gradle.kts  build.xml
app/linux/: org.processing.pde.yml  snapcraft.base.yml
app/utils/: build.gradle.kts
app/windows/: Processing.wxs
core/: .classpath  .gitignore  .project  README.md  build.gradle.kts
core/different/: different.m
core/test/processing/: ShapeTests.java
gradle/: libs.versions.toml
gradle/plugins/: settings.gradle.kts
java/: README.md  build.gradle.kts  keywords.txt  settings.gradle.kts
java/gradle/: README.md  build.gradle.kts
java/gradle/example/: brightness.pde  build.gradle.kts  settings.gradle.kts
java/lsp/: build.gradle.kts
java/preprocessor/: build.gradle.kts
libProcessing/: Cargo.toml
libProcessing/ffi/: Cargo.toml  build.rs  cbindgen.toml
libProcessing/renderer/: Cargo.toml
libProcessing/renderer/src/: error.rs  lib.rs
libProcessing/renderer/src/render/: command.rs  material.rs  mesh_builder.rs  mod.rs
libProcessing/renderer/src/render/primitive/: mod.rs  rect.rs
visual-tests/: build.gradle.kts
(+375 files in other folders)
