[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
bevy = { version = "0.17", no-default-features = true, features = [
    "bevy_render"
] }
thiserror = "2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView"] }