[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
lyon = "1.0"
raw-window-handle = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }